# github-activity-bot

./: .gitignore  Cargo.toml  README.md  config.toml
changes/: change_1.txt  change_10.txt  change_11.txt  change_12.txt  change_13.txt  change_14.txt  change_15.txt  change_16.txt  change_2.txt  change_3.txt  change_4.txt  change_5.txt  change_6.txt  change_7.txt  change_8.txt  change_9.txt
src/: main.rs
